# dsd-player

./: Cargo.toml  build.rs
src/rust/: main.rs
src/rust/ui/: main_window.rs
src/rust/verbose/: mod.rs  track.rs
src/rust/verbose/collection/: album.rs  indexed_fs.rs  library_parser.rs  mod.rs
src/slint/: main-window.slint
src/slint/player_component/: player-component.slint
