[package]
name = "dsd-player"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/rust/main.rs"
name = "dsd-player"

[dependencies]
slint = "1"
dsf = "0.2"
id3 = "1"

byteorder = "1"
gstreamer = "0.23"
gstreamer-pbutils = "0.23"
encoding_rs = "0.8"
chardetng = "0.1"
tokio = {version = "1", features = ["full"]}
rust-embed = "8"

[target.'cfg(target_os = "windows")'.dependencies]
ndsd-playback = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
ndsd-playback = "0.3"

[build-dependencies]
slint-build = "1"